--- a/ppx_monolith.opam
+++ b/ppx_monolith.opam
@@ -1,8 +1,8 @@
 opam-version: "2.0"
 name: "ppx_monolith"
 synopsis: ""
-maintainer: "nicolas.osborne@tarides.com"
-authors: "nicolas.osborne@tarides.com"
+maintainer: "email@n-osborne.info"
+authors: "email@n-osborne.info"
 depends: [
   "ocaml"
   "dune"
