handle external definitions

--- a/src/dune
+++ b/src/dune
@@ -5,4 +5,4 @@
   (pps ppxlib.metaquot))
  (ppx_runtime_libraries monolith pprint)
  (libraries ppxlib)
- (modules ppx_deriving_monolith generators printers specs utils raise))
+ (modules ppx_monolith generators printers specs utils raise))
