--- a/ppx_monolith.opam
+++ b/ppx_monolith.opam
@@ -2,17 +2,18 @@ opam-version: "2.0"
 name: "ppx_monolith"
 synopsis: "Ppx deriver for monolith test framework"
 maintainer: ["Nicolas Osborne <email@n-osborne.info>"]
+license: "MIT"
 authors: ["Nicolas Osborne <email@n-osborne.info>"]
 homepage: "https://github.com/n-osborne/ppx_monolith"
 dev-repo: "git+https://github.com/n-osborne/ppx_monolith.git"
 doc: "https://n-osborne.github.io/ppx_monolith"
 bug-reports: "https://github.com/n-osborne/ppx_monolith/issues"
 depends: [
-  "ocaml"
-  "dune"
-  "ppxlib"
-  "monolith"
-  "pprint"
+  "ocaml" {>= "4.12"}
+  "dune" {>= "2.4.0"}
+  "ppxlib" {>= "0.20.0"}
+  "monolith" {>= "20201026"}
+  "pprint" {>= "20220103"}
 ]
 build: [
   ["dune" "subst"] {dev} 
